新增工具类，编辑sql脚本导入工具类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,14 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+
+baseconfig:
+   sqlscriptpath: sql
+
+
+
+
+
+
