--- a/src/main/resources/application-own.yml
+++ b/src/main/resources/application-own.yml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/easyhr?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/java_test?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,7 +9,7 @@ spring:
 baseconfig:
   sqlscriptpath: sql
   initscriptname: init.sql
-  databaseName: cmbi_report
+  databaseName: java_test
   filterurl:
     - /*
 
