--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,20 @@
 server:
-  port: 6666
-  servlet:
-    context-path: /base
+  port: 8001
 
 
-
+mybatis:
+  type-aliases-package: com.wuzhiaite.javaweb.base.entity # entity别名类所在包
+  mapper-locations: mybatis/mapper/*.xml    # mapper映射文件
 spring:
+  application:
+    name: microserver-product #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
   datasource:
-    url: jdbc:mysql://localhost:3306/cmbi_user?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-    username: root
-    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-
-
-baseconfig:
-   sqlscriptpath: sql
-   initscriptname: init.sql
-
-
-
-
+    url: jdbc:mysql://127.0.0.1:3307/cmib_report?serverTimezone=GMT%2B8
+    password: root
+    username: root
+    dbcp2:
+      min-idle: 5                         # 数据库连接池的最小维持连接数
+      initial-size: 5                     # 初始化连接数
+      max-total: 5                        # 最大连接数
+      max-wait-millis: 150                # 等待连接获取的最大超时时间
