--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -17,5 +17,16 @@ spring:
       initial-size: 5                     # 初始化连接数
       max-total: 5                        # 最大连接数
       max-wait-millis: 150                # 等待连接获取的最大超时时间
-
+  redis:
+    host: 47.113.120.21
+    port: 6379
+    password: 123456
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 500
+        min-idle: 0
+    lettuce:
+      shutdown-timeout: 0
 
