新增多数据源切换

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,16 +9,19 @@ server:
 spring:
   application:
     name: microserver-product #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/cmbi_report?serverTimezone=GMT%2B8
-    password: root
-    username: root
-    dbcp2:
-      min-idle: 5                         # 数据库连接池的最小维持连接数
-      initial-size: 5                     # 初始化连接数
-      max-total: 5                        # 最大连接数
-      max-wait-millis: 150                # 等待连接获取的最大超时时间
+  dbsource:
+    master:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3307/cmbi_report?serverTimezone=GMT%2B8
+      password: root
+      username: root
+
+    slave:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3307/cmbi_boss?serverTimezone=GMT%2B8
+      password: root
+      username: root
+
   redis:
     host: 192.168.210.128
     port: 6379
