--- a/pom.xml
+++ b/pom.xml
@@ -196,10 +196,10 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <!--actuator-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--        </dependency>-->
 
 
 
