增加新的依赖文件

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -41,8 +41,12 @@ spring:
     username: guest
 
 
+
+
 logging:
   file:
     path: D:\log
 
-
+mybatis:
+  configuration:
+    cache-enabled: true
