--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -29,7 +29,10 @@ spring:
         min-idle: 0
     lettuce:
       shutdown-timeout: 0
-
+  servlet:
+    multipart:
+      max-file-size: 2000MB
+      max-request-size: 2000MB
 
 
 
@@ -37,3 +40,6 @@ spring:
 logging:
   file:
     path: /usr/local/java/log/
+
+
+uploadFilePath: /usr/local/java/upload/
