--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,14 @@
             <version>5.3.1</version>
         </dependency>
 
+        <!--  分布式定时任务  -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
