--- a/pom.xml
+++ b/pom.xml
@@ -231,37 +231,17 @@
             <artifactId>easyexcel</artifactId>
             <version>2.2.3</version>
         </dependency>
-        <!-- 通用Mapper -->
+        <!-- flowable流程引擎 -->
 <!--        <dependency>-->
-<!--            <groupId>tk.mybatis</groupId>-->
-<!--            <artifactId>mapper</artifactId>-->
-<!--            <version>3.3.9</version>-->
+<!--            <groupId>org.flowable</groupId>-->
+<!--            <artifactId>flowable-engine</artifactId>-->
+<!--            <version>6.5.0</version>-->
 <!--        </dependency>-->
 
 
-        <!--    activiti    -->
-<!--        <dependency>-->
-<!--            <groupId>org.activiti</groupId>-->
-<!--            <artifactId>activiti-spring-boot-starter-basic</artifactId>-->
-<!--            <version>6.0.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter-engine</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.integration</groupId>-->
-<!--            <artifactId>spring-integration-core</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.integration</groupId>-->
-<!--            <artifactId>spring-integration-file</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.activiti</groupId>-->
-<!--            <artifactId>activiti-image-generator</artifactId>-->
-<!--        </dependency>-->
+
+
+
 
     </dependencies>
 
