--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -8,16 +8,17 @@ spring:
     include: pro-extra #加入额外的文件
   application:
     name: microserver-product #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://rm-uf6101yy6jg1qe3e8lo.mysql.rds.aliyuncs.com/com_sys?serverTimezone=GMT%2B8
-    password: wuzhiaite
-    username: wuzhiaite
-    dbcp2:
-      min-idle: 5                         # 数据库连接池的最小维持连接数
-      initial-size: 5                     # 初始化连接数
-      max-total: 5                        # 最大连接数
-      max-wait-millis: 150                # 等待连接获取的最大超时时间
+  dbsource: #多数据源配置
+    master:
+      driver-class-name: com.mysql.cj.jdbc.Drivergit
+      url: jdbc:mysql://rm-uf6101yy6jg1qe3e8lo.mysql.rds.aliyuncs.com/com_sys?serverTimezone=UTC&useSSL=false
+      password: wuzhiaite
+      username: wuzhiaite
+#    dbcp2:ss
+#      min-idle: 5                         # 数据库连接池的最小维持连接数
+#      initial-size: 5                     # 初始化连接数
+#      max-total: 5                        # 最大连接数
+#      max-wait-millis: 150                # 等待连接获取的最大超时时间springboot linux启动项目
   redis:
     host: 47.113.120.21
     port: 6379
@@ -35,6 +36,10 @@ spring:
       max-file-size: 2000MB
       max-request-size: 2000MB
 
+mybatis:
+  configuration:
+    cache-enabled: true
+  mapper-locations: /mapper/*.xml
 
 
 
