--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,11 @@
             <artifactId>easyexcel</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <!-- rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!-- flowable流程引擎 -->
         <dependency>
             <groupId>org.flowable</groupId>
