开启系统，自动创建消息队列

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -55,8 +55,11 @@ logging:
   file:
     path: D:\log
 uploadFilePath: D:\\uploadFile\\
-
-
+# rabbitmq 初始化配置
+rabbit-init:
+  list:
+    - {exchange: cs.user,queues: [user.role,role.permission] , bindingKey: '#.role.#', type: topic }
+    - {exchange: cs.user,queues: [role.permission] , bindingKey: '#.permission', type: topic }
 
 
 
