--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- flowable流程引擎 -->
 <!--        <dependency>-->
 <!--            <groupId>org.flowable</groupId>-->
