--- a/pom.xml
+++ b/pom.xml
@@ -244,14 +244,15 @@
         </dependency>
 
 
-        <!-- elasticsearch -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
-<!--        </dependency>-->
+<!--         elasticsearch-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-elasticsearch</artifactId>
+<!--            <version>4.0.0.RELEASE</version>-->
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.elasticsearch.client</groupId>-->
