--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,13 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
+        <!--  activity-->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
