--- a/pom.xml
+++ b/pom.xml
@@ -269,7 +269,11 @@
             <artifactId>activiti-spring</artifactId>
             <version>6.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+            <version>6.0.0</version>
+        </dependency>
 
     </dependencies>
 
