--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <flowable.version>6.3.0</flowable.version>
     </properties>
 
 
@@ -254,15 +253,29 @@
             <artifactId>spring-data-elasticsearch</artifactId>
 <!--            <version>4.0.0.RELEASE</version>-->
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.elasticsearch.client</groupId>-->
-<!--            <artifactId>elasticsearch-rest-high-level-client</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
+
+        <!-- activiti-->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>8.0.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-jpa</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
