--- a/pom.xml
+++ b/pom.xml
@@ -219,11 +219,11 @@
         </dependency>
 
         <!--  分布式定时任务  -->
-        <dependency>
-            <groupId>com.xuxueli</groupId>
-            <artifactId>xxl-job-core</artifactId>
-            <version>2.2.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.xuxueli</groupId>-->
+<!--            <artifactId>xxl-job-core</artifactId>-->
+<!--            <version>2.2.0</version>-->
+<!--        </dependency>-->
         <!--  EasyExcel -->
         <dependency>
             <groupId>com.alibaba</groupId>
