--- a/src/main/resources/application-pro-extra.yml
+++ b/src/main/resources/application-pro-extra.yml
@@ -6,7 +6,7 @@ xxl:
   job:
     admin:
       ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-      addresses: http://47.113.120.21:8080/xxl-job-admin
+#      addresses: http://47.113.120.21:8080/xxl-job-admin
 
     ### xxl-job, access token
     accessToken:
