--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,10 @@ spring:
     mode: HTML5
     cache: true
   profiles:
-    active: dev
+    active: pro
+  main:
+    allow-bean-definition-overriding: true
 
 mybatis:
   configuration:
     cache-enabled: true
-
