--- a/src/main/docker/dockerFile
+++ b/src/main/docker/dockerFile
@@ -11,4 +11,4 @@ VOLUME /tmp
 ADD spring-boot-javaweb-base-0.0.1-SNAPSHOT.jar cs.jar
 # 运行jar包
 RUN bash -c 'touch /cs.jar'
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/cs.jar"]
