--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,13 @@
             <version>6.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
+
 
     </dependencies>
 
